# AlB-DO

./: .gitattributes  .gitignore  AlBDO_Pitch_Deck.pptx  Cargo.toml  ENDGAME.md  Implemenatation-plan.md  README.md  STRATEGY.md  TODO.md  chat.html  home.html  legend.md  response.html  rustc-ice-2026-05-25T14_48_17-7424.txt
.claude/: launch.json  settings.local.json
.deck-build/: deck.js  icons.js  package-lock.json
.github/workflows/: ci.yml  release-binaries-main.yml  release.yml
_claude-migration/: RESTORE.md  restore.ps1
_claude-migration/global/: settings.json
_claude-migration/memory/: MEMORY.md  design_tier_classification.md  feedback-use-albedo-init.md  feedback_engineering_bar.md  feedback_never_global_cargo_fmt.md  feedback_rewrite_weak_design.md  project_a1_bridge.md  project_a2_npm_bundling.md  project_a3_client_hydration.md  project_a4_userland_boundary.md  project_albedo_migrate.md  project_albedo_server.md  project_alkmy_brand_identity.md  project_async_server_components_gap.md  project_b_hooks_and_head.md  project_backend_paradigm.md  project_c_harness.md  project_cli_restyle.md  project_compiler_pipeline.md  project_dep_detection_gap.md  project_dev_serve_unification.md  project_dogfood_portfolio.md  project_endgame.md  project_error_loading_boundaries_gap.md  project_forge_capability_budget.md  project_forge_phase0.md  project_gate1_closed.md  project_gate1_d_hardening.md  project_gtm_content_calendar.md  project_halation_flagship.md  project_investor_demo.md  project_overview.md  project_p3_dynamic_routes.md  project_p5_useeffect_hydration_gap.md  project_p6_actions_zod.md  project_personal_site.md  project_phase_glossary.md  project_phase_l.md  project_phase_m.md  project_phase_n.md  (+17 more)
assets/: albedo-client.js  albedo-dev-stream.js  albedo-error-overlay.js  albedo-hmr-apply.js  albedo-link-forms.js  albedo-reactive.js  albedo-runtime.js  albedo-wt-bootstrap.js  bincode.js
benches/: frame_tick.rs  opcode_wire.rs  parity_action_roundtrip.rs  parity_cold_start.rs  parity_fcp_bytes.rs  parity_hydration_bytes.rs
benchmarks/parity/: README.md
brief/: brief.html  build.py
crates/albedo-server/: Cargo.toml
crates/albedo-server/examples/: chat_broadcast.rs
crates/albedo-server/src/: actions.rs  api.rs  boot.rs  engine_pool.rs  lib.rs  renderer_runtime.rs  server.rs  timing.rs  webtransport.rs
crates/albedo-server/src/dev/: error_overlay.rs  hmr.rs  mod.rs
crates/albedo-server/src/handlers/: action.rs  albedo_assets.rs  api.rs  dev.rs  mod.rs  patches.rs  public_assets.rs  streaming.rs
crates/albedo-server/src/inspector/: api.rs  events.rs  graph.rs  heartbeat.rs  metrics.rs  mod.rs  publisher.rs  state.rs
crates/albedo-server/src/inspector/assets/: inspector.html
crates/albedo-server/src/render/: csrf.rs  form_action.rs  form_validation.rs  mod.rs  row_projector.rs  tier_b.rs
crates/albedo-server/tests/: broadcast_end_to_end.rs  cli_first_run.rs  compiled_project_dispatch.rs  form_action_roundtrip.rs  form_submit_end_to_end.rs  public_assets_end_to_end.rs  serve_boot_end_to_end.rs  server_wire_integration.rs  ts_action_topic_registration.rs
development-plan/: ENDGAME2.md  PORT_DIFF.md  STRATEGY.md  USING-ALBEDO.md  WAR.md  albdo_fixtures.md  backend.md  budget_forge.md
examples/pulse-dashboard/: App.tsx  Counter.tsx  LatencyTable.tsx  README.md  StatusPill.tsx
fuzz/: Cargo.toml
fuzz/fuzz_targets/: decode_action_envelope.rs  decode_frame.rs  decode_intern_table.rs
graphify-out/: .graphify_labels.json  AlBDO-v-0.1.0-callflow.html  GRAPH_REPORT.md  GRAPH_TREE.html  manifest.json
graphify-out/2026-06-26/: .graphify_labels.json  GRAPH_REPORT.md  manifest.json
graphify-out/2026-06-27/: .graphify_labels.json  GRAPH_REPORT.md  manifest.json
graphify-out/2026-06-28/: .graphify_labels.json  GRAPH_REPORT.md  manifest.json
graphify-out/2026-06-29/: .graphify_labels.json  GRAPH_REPORT.md  manifest.json
graphify-out/2026-07-01/: .graphify_labels.json  GRAPH_REPORT.md  cost.json  manifest.json
graphify-out/2026-07-02/: .graphify_labels.json  GRAPH_REPORT.md  manifest.json
graphify-out/2026-07-03/: .graphify_labels.json  GRAPH_REPORT.md  manifest.json
graphify-out/2026-07-04/: GRAPH_REPORT.md  manifest.json
graphify-out/cache/: stat-index.json
gtm/: calendar.html
installer/windows/: AlBDO.wxs
scaffold/: .gitignore  .prettierrc  App.tsx  Counter.tsx  LiveFeed.tsx  README.md  albedo.config.ts  index.html  package.json  tier-budget.toml  tsconfig.json
scaffold/src/: App.tsx  Counter.tsx  Hero.tsx  LiveFeed.tsx  albedo-env.d.ts  styles.css
src/: effects.rs  estimator.rs  incremental.rs  lib.rs  parser.rs  scanner.rs  types.rs
src/analysis/: parallel.rs  parallel_topo.rs
src/budget/: bundle.rs  config.rs  format.rs  mod.rs  report.rs
src/bundler/: emit.rs  mod.rs  npm.rs  rewrite.rs
src/dev/: contract.rs  mod.rs  proc_bench.rs  serve_bench.rs  showcase.rs
src/forge/: declare.rs  delta.rs  libsql.rs  mem.rs  mod.rs  reserve.rs  skeleton.rs  substrate.rs  value.rs  write.rs
src/hydration/: mod.rs  payload.rs  script.rs
src/ir/: action.rs  columns.rs  conformance.rs  mod.rs  opcode.rs  wire.rs
src/manifest/: builder.rs  metadata.rs  mod.rs  schema.rs
src/routing/: file_based.rs  mod.rs
src/runtime/: affinity.rs  arena.rs  bridge.rs  broadcast.rs  compiled.rs  dirty_bitmap.rs  emitter.rs  mod.rs  (+11 more)
tests/: adversarial_input.rs  bakabox_wire_conformance.rs  broadcast_failure_modes.rs  budget_integration.rs  bundle_budget_integration.rs  bundler_emit_integration_tests.rs  client_hydration.rs  css_modules_end_to_end.rs  ctrnitas_pilot.rs  decode_frame_smoke.rs  forge_gate1_e2e.rs  forge_kill_harness.rs  forge_reserve_concurrency.rs  frame_soak.rs  hook_compile_golden.rs  hydration_integration_tests.rs  jsx_expr_eval_matrix.rs  layout_chain_end_to_end.rs  npm_bundle.rs  npm_real_packages.rs  phase0_golden_correctness_tests.rs  pulse_dashboard_demo.rs  reactive_bindings.rs  shared_slot_golden.rs  ts_action_broadcast.rs  ts_action_compilation.rs  ts_action_quickjs.rs  ts_render_quickjs.rs  visual_runtime_tests.rs
(+111 files in other folders)
