[package]
name              = "albedo-server"
version.workspace     = true
edition.workspace     = true
rust-version.workspace = true
authors.workspace     = true
license.workspace     = true
repository.workspace  = true
homepage.workspace    = true

[features]
# FORGE — the backend-less backend (development-plan/backend.md). Off by
# default so the standard `albedo` build never pulls the storage backend;
# enabling it here turns on the root crate's `forge` feature, which brings in
# the libSQL substrate (`dom_render_compiler::forge::LibSqlSubstrate`).
forge = ["dom-render-compiler/forge"]

[dependencies]
async-trait.workspace          = true
async-stream.workspace         = true
axum.workspace                 = true
base64.workspace               = true
bytes.workspace                = true
dashmap.workspace              = true
dom-render-compiler.workspace  = true
futures-util.workspace         = true
http.workspace                 = true
matchit.workspace              = true
serde.workspace                = true
serde_json.workspace           = true
thiserror.workspace            = true
tokio.workspace                = true
tokio-stream.workspace         = true
tracing.workspace              = true
url.workspace                  = true
uuid.workspace                 = true
quinn.workspace                = true
rustls-pemfile.workspace       = true
rustls-pki-types.workspace     = true
xxhash-rust.workspace          = true

# Phase P · Stream A — the `albedo` CLI bin lives here (rather than in
# the root `dom-render-compiler` crate) so its `serve` subcommand can
# call `boot_production_server` without forming a workspace dep cycle.
# The source file remains at `<workspace>/src/bin/albedo.rs` and is
# reached via the relative `path` below; `include_str!` paths inside
# that file resolve from its on-disk location, not the crate root, so
# the existing `../../assets/...` / `../../scaffold/...` includes still
# work. The bin's extra deps (`notify`, `walkdir`) come in as ordinary
# dependencies above-level so they're available to the bin without
# polluting the `albedo_server` library's surface — the library uses
# none of them.
notify  = { workspace = true }
walkdir = { workspace = true }

[dev-dependencies]
tempfile.workspace = true
tower.workspace = true

[[bin]]
name = "albedo"
path = "../../src/bin/albedo.rs"
